# cooking_robot

./: motionplanningscript  robot_kitchen.world
gazebo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
gazebo/install/ur_simulation_gz/share/ur_simulation_gz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
gazebo/log/: latest_build  latest_mixin
install/: local_setup.sh  setup.sh
install/cooking_movement/share/cooking_movement/: package.xml
install/my_robot_controller/lib/my_robot_controller/: controller  pose
install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_description/share/ur_description/cmake/: ur_descriptionConfig-version.cmake  ur_descriptionConfig.cmake
install/ur_description/share/ur_description/config/: initial_positions.yaml
install/ur_description/share/ur_description/environment/: ament_prefix_path.dsv  path.dsv
install/ur_description/share/ur_description/launch/: view_ur.launch.py
install/ur_description/share/ur_description/rviz/: view_robot.rviz
install/ur_description/share/ur_description/test/: test_ur_urdf_xacro.py  test_view_ur_launch.py
install/ur_description/share/ur_description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
kitchen/: model.config
log/: latest_build  latest_list
robot/install/: local_setup.sh  setup.sh
robot/install/gazebo_ros2_control/share/gazebo_ros2_control/: local_setup.sh  package.sh  package.xml
robot/install/six_dof_arm/share/six_dof_arm/: local_setup.sh  package.sh  (+1 more)
robot/log/: latest_build  latest_version-check
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
src/cooking_movement/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/cooking_movement/config/: robot_moveit_config.yaml
src/cooking_movement/cooking_movement/: action_recognition.py  motion_planning.py
src/cooking_movement/launch/: cooking_movement.launch.py  gazebo_launch.py  rviz_launch.py
src/gazebo_plugins/: robot_kitchen.world
src/gazebo_plugins/kitchen/: model.sdf
src/robot_control/: pick_and_place.py  run_script
(+159 files in other folders)
